# Heath

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Heath.cabal  README.md
.github/workflows/: ci.yml
app/: Main.hs
src/: Heath.hs
src/Heath/: Eval.hs  Func.hs  Parser.hs  Repl.hs  Types.hs
src/Heath/Func/: Bool.hs  List.hs  Number.hs  System.hs  Type.hs
test/: Spec.hs
