cabal-version:       2.4
name:                Heath
version:             0.0.0.0
synopsis:            A scheme interpreter, made to better understand Haskell
description:         A scheme interpreter, made to better understand Haskell
homepage:            https://github.com/TFKls/Heath
bug-reports:         https://github.com/TFKls/Heath/issues
license:             GPL-3.0-only
license-file:        LICENSE
author:              Tomasz "TFKls" Kulis
maintainer:          Tomasz "TFKls" Kulis <tfk@tfkls.dev>
copyright:           2021 Tomasz "TFKls" Kulis
category:            Compilers/Interpreters
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/TFKls/Heath.git
common common-options
  build-depends:       base ^>= 4.13.0.0
                     , containers >= 0.6.2 && < 0.7
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Heath
                     , Heath.Parser
  build-depends:       parsec >= 3.1.14 && < 3.1.15
executable Heath
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       Heath
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
test-suite Heath-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       Heath
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N